# css-preprocessor

./: .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  README.md  analyze.sh  doxygen.conf  test.sh
framework/: main.cssp
framework/partials/: button.cssp  grid.cssp  typography.cssp
src/: lexer.l  main.cpp  parser.y  parser.yy
src/lib/: types.hpp
src/lib/ast/: Ast.hpp
src/lib/ast/block/: Block.cpp  Block.hpp
src/lib/ast/for/: For.cpp  For.hpp
src/lib/ast/import/: Import.cpp  Import.hpp
src/lib/ast/media/: Media.cpp  Media.hpp
src/lib/ast/mediaEntry/: MediaEntry.cpp  MediaEntry.hpp
src/lib/ast/modifier/: Modifier.cpp  Modifier.hpp
src/lib/ast/node/: Node.cpp  Node.hpp
src/lib/ast/property/: Property.cpp  Property.hpp
src/lib/ast/selector/: Selector.cpp  Selector.hpp
src/lib/ast/separator/: Separator.cpp  Separator.hpp
src/lib/ast/string/: String.hpp
src/lib/ast/value/calculation/: Calculation.cpp  Calculation.hpp
src/lib/ast/value/color/: Color.cpp  Color.hpp
src/lib/ast/value/functionCall/: FunctionCall.cpp  FunctionCall.hpp
src/lib/ast/value/number/: Number.cpp  Number.hpp
src/lib/ast/value/string/: String.cpp  String.hpp
src/lib/ast/value/value/: Value.cpp  Value.hpp
src/lib/ast/value/variable/: Variable.cpp  Variable.hpp
src/lib/ast/variableSetter/: VariableSetter.cpp  VariableSetter.hpp
src/lib/context/: Context.cpp  Context.hpp
src/lib/driver/: Driver.cpp  Driver.hpp
src/lib/generator/: Generator.cpp  Generator.hpp
src/lib/lexer/: Lexer.hpp
src/lib/logger/: Logger.cpp  Logger.hpp
src/lib/main/: Main.cpp  Main.hpp
src/lib/token/: Token.cpp  Token.hpp
src/lib/tree/: AST.hpp
tests/: diff.sh  selector.simple
tests/in_out/: amp.in  amp.out  calculation.in  calculation.out  for.in  for.out  functions.out  import.in  import.out  import_1.part  import_2.part  parent_operator.in  parent_operator.out  variables.in  variables.out
tests/manual/reccurence/: a.scss  b.scss
tests/simple/: blocks.simple  function.simple  import.simple  media.simple  selector.simple  valgrind.simple  variables.simple
